# entity-resolution-pipeline

./: .gitignore  EVALUATION_METRICS.md  FEATURES.md  MODEL_FORMAT.md  Makefile  PIPELINE_FLOW.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: amazon_google.yaml
notebooks/: 01_eda.ipynb  02_features_model.ipynb  03_results.ipynb
results/: metrics.json  results.json
src/er/: __init__.py  __main__.py  blocking.py  calibrate.py  config.py  download.py  evaluate.py  features.py  normalize.py  pipeline.py  train.py
tests/: test_blocking.py  test_config.py  test_evaluate.py  test_features.py  test_normalize.py
