[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "er-pipeline"
version = "0.1.0"
description = "End-to-end entity resolution pipeline on public benchmarks"
requires-python = ">=3.10"
dependencies = [
    "lightgbm>=4.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "rapidfuzz>=3.0",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
